--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,6 +1,6 @@
 ---
 name: Đỗ Viết Soái
-avatar: /static/images/avatar.png
+avatar: /static/images/avatar.jpg
 occupation: Mobile Developer
 company: Học viện kĩ thuật mật mã
 email: dosoai32@gmail.com
